[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = "A simple Flask application using Devbox and NixOS"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


